--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Game</title>
 
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
     <nav>
@@ -39,9 +40,9 @@
     <!-- about  -->
     <section class="about" id="about">
         <div class="row">
-            <div class="col50">
+            <div class="col50" data-aos="fade-right">
                 <!-- <h2 class="title-text"><box-icon name='user-rectangle' type='solid' color='#00ffff' ></box-icon>About <span>Us</span></h2> -->
-                <h2 class="title-text"><lord-icon
+                <h2 class="title-text" data-aos="zoom-in"><lord-icon
                     src="https://cdn.lordicon.com/nocovwne.json"
                     trigger="loop"
                     colors="primary:#00ffff,secondary:#ffffff"
@@ -50,7 +51,7 @@
                 </lord-icon>About <span>Us</span></h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro quo illum iusto labore consequuntur, repudiandae quasi officia, aut provident similique corrupti eum quibusdam corporis assumenda. Similique, vel reprehenderit numquam voluptas repellat voluptatem et omnis! Odio, ex adipisci maxime maiores sunt deleniti labore consequuntur accusamus voluptate!</br></br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam officia magni consectetur inventore, quisquam soluta maiores culpa illo est distinctio expedita ad aliquid. Enim odit, blanditiis temporibus sunt non impedit?Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat modi ipsam aperiam cumque nesciunt ea tempora! In, totam? Porro exercitationem dolor voluptatem alias accusamus iure consectetur iste vero eaque id?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, corrupti quis sunt magnam dolorum accusantium inventore earum placeat quos, non rem vero ipsam neque dolore sed? Cupiditate incidunt porro laudantium.</br></br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam dicta facere iste qui velit autem, accusantium cumque pariatur expedita consequuntur optio quis eaque delectus quod similique, magni beatae a earum inventore sit perspiciatis. Mollitia, itaque?</p>
             </div>
-            <div class="col50">
+            <div class="col50" data-aos="fade-left">
                 <div class="imgBx">
                     <img src="media/ab.jpg" alt="">
                 </div>
@@ -63,17 +64,17 @@
     <!-- ganes -->
     <section id="games" class="game">
         <div class="title">
-            <lord-icon
+            <lord-icon 
                 src="https://cdn.lordicon.com/ibgjiwvi.json"
                 trigger="loop"
                 colors="primary:#00ffff,secondary:#ffffff"
-                style="width: 50px;height: 50px;">
+                style="width: 50px;height: 50px;"  data-aos="zoom-out">
             </lord-icon>
             <h2 class="title-text"><span>G</span>ames</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam fugiat nemo qui.</p>
         </div>
         <div class="content">
-            <div class="box">
+            <div class="box" data-aos="flip-left">
                 <div class="imgBx">
                     <img src="media/games/bgmi.jpg" alt="">
                 </div>
@@ -81,7 +82,7 @@
                     <h3>Battlegrounds Mobile India</h3>
                 </div>
             </div>
-            <div class="box">
+            <div class="box" data-aos="flip-right">
                 <div class="imgBx">
                     <img src="media/games/cod.jpg" alt="">
                 </div>
@@ -89,7 +90,7 @@
                     <h3>Call Of Duty:Mobile</h3>
                 </div>
             </div>
-            <div class="box">
+            <div class="box" data-aos="flip-left">
                 <div class="imgBx">
                     <img src="media/games/minecraft.jpg" alt="">
                 </div>
@@ -97,7 +98,7 @@
                     <h3>Minecraft</h3>
                 </div>
             </div>
-            <div class="box">
+            <div class="box" data-aos="flip-left">
                 <div class="imgBx">
                     <img src="media/games/lords.png" alt="">
                 </div>
@@ -105,7 +106,7 @@
                     <h3>Lords Mobile</h3>
                 </div>
             </div>
-            <div class="box">
+            <div class="box" data-aos="flip-right">
                 <div class="imgBx">
                     <img src="media/games/pokemon.jpg" alt="">
                 </div>
@@ -113,7 +114,7 @@
                     <h3>Pokemob Unite</h3>
                 </div>
             </div>
-            <div class="box">
+            <div class="box" data-aos="flip-left">
                 <div class="imgBx">
                     <img src="media/games/freefire.jpg" alt="">
                 </div>
@@ -139,7 +140,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam fugiat nemo qui.</p>
         </div>
         <div class="content">
-            <div class="box box-1">
+            <div class="box box-1"  data-aos="zoom-out-right">
                 <div class="imgBx">
                     <img src="media/merchandise/streak-hoodie.jpg" alt="">
                 </div>
@@ -149,7 +150,7 @@
                 </div>
                 <a href="#" class="know">Know More</a>
             </div>
-            <div class="box box-2">
+            <div class="box box-2" data-aos="zoom-out-up">
                 <div class="imgBx">
                     <img src="media/merchandise/mask.jpg" alt="">
                 </div>
@@ -159,7 +160,7 @@
                 </div>
                 <a href="#" class="know">Know More</a>
             </div>
-            <div class="box box-3">
+            <div class="box box-3" data-aos="zoom-out-left">
                 <div class="imgBx">
                     <img src="media/merchandise/mobile-collabs.jpg" alt="">
                 </div>
@@ -217,6 +218,13 @@
     <!-- script -->
     <script src="https://unpkg.com/boxicons@2.1.1/dist/boxicons.js"></script>
     <script src="https://cdn.lordicon.com/libs/mssddfmo/lord-icon-2.1.0.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            offset: 300,
+            duration: 2000,
+        });
+    </script>
     <script type="text/javascript">
         window.addEventListener('scroll',function(){
             const header = document.querySelector('nav');
