--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <!-- ganes -->
     <section id="games" class="game">
-        <div class="title">
+        <div class="title" data-aos="zoom-in">
             <lord-icon 
                 src="https://cdn.lordicon.com/ibgjiwvi.json"
                 trigger="loop"
@@ -129,7 +129,7 @@
 
     <!-- merchandise  -->
     <section class="merchandise" id="merchandise">
-        <div class="title">
+        <div class="title" data-aos="zoom-in">
             <lord-icon
                 src="https://cdn.lordicon.com/ippkhukl.json"
                 trigger="loop"
@@ -177,7 +177,7 @@
     <!-- contact  -->
     <section class="contact" id="contact">
         <div class="content">
-            <div class="text">
+            <div class="text" data-aos="zoom-in">
                 <h3>Send Us A Message</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis a impedit nulla neque alias temporibus.</p>
             </div>
